# Snake-AI

./: CMakeLists.txt  TODO.md  main.cpp
include/: Game.h  Logger.h
src/: Game.cpp  Logger.cpp
